2007-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l, vala/parser.y, vala/valasemanticanalyzer.vala,
	  vala/valacodevisitor.vala, vala/valasizeofexpression.vala,
	  gobject/valacodegenerator.vala: support sizeof expression
	* vala/vala.h, vala/Makefile.am: update
	* vapi/glib-2.0.vala: add struct_size param to GLib.Source construction
	  method

2007-05-14  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: improve argument checks of invocation
	  expression, fixes bug 435854

2007-05-10  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodeblock.vala, ccode/valaccodedeclaration.vala,
	  ccode/valaccodedeclarator.vala, ccode/valaccodefragment.vala,
	  ccode/valaccodefunctiondeclarator.vala, ccode/valaccodenode.vala,
	  ccode/valaccodeoncesection.vala, ccode/valaccodestruct.vala,
	  ccode/valaccodetypedefinition.vala,
	  ccode/valaccodevariabledeclarator.vala: separate declaration output
	* vala/parser.y: remove comma at end of enum
	* vala/valaclass.vala, vala/valastruct.vala: remove unused methods
	* vala/Makefile.am: update
	* gobject/valacodegeneratorsourcefile.vala: support declaration
	  separation in C code
	* gobject/valaclassregisterfunction.vala,
	  gobject/valainterfaceregisterfunction.vala,
	  gobject/valatyperegisterfunction.vala: move from vala directory,
	  move interface info declarations to the beginning of the block
	* gobject/Makefile.am: update

2007-05-09  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodeenum.vala: remove comma at end of generated enumerator
	  list, fixes gcc warning

2007-05-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala: generate get_property and
	  set_property methods only when necessary, fixes bug 435848

2007-05-09  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: add basic checks for method modifiers, fixes bug 435853
	* vala/vala.h: include valaflagsvalue.h

2007-05-09  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala: iterate correctly over string in